[project]
name = "pet-behavior-platform"
version = "0.1.0"
description = "Distributed AI platform for analyzing pet behavior from images and videos."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [
{ name = "BING INTELLIGENCE, LLC" }
]
keywords = [
"artificial-intelligence",
"computer-vision",
"fastapi",
"kubernetes",
"large-language-models",
"machine-learning",
"pet-behavior",
"video-analysis"
]
classifiers = [
"Development Status :: 3 - Alpha",
"License :: OSI Approved :: Apache Software License",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
"aiokafka>=0.12.0,<1.0.0",
"alembic>=1.14.0,<2.0.0",
"asyncpg>=0.30.0,<1.0.0",
"boto3>=1.35.0,<2.0.0",
"fastapi>=0.115.0,<1.0.0",
"httpx>=0.28.0,<1.0.0",
"numpy>=2.0.0,<3.0.0",
"opencv-python-headless>=4.10.0,<5.0.0",
"orjson>=3.10.0,<4.0.0",
"pillow>=11.0.0,<12.0.0",
"prometheus-client>=0.21.0,<1.0.0",
"psycopg[binary]>=3.2.0,<4.0.0",
"pydantic>=2.10.0,<3.0.0",
"pydantic-settings>=2.7.0,<3.0.0",
"python-multipart>=0.0.20,<1.0.0",
"redis>=5.2.0,<6.0.0",
"sqlalchemy>=2.0.0,<3.0.0",
"structlog>=24.4.0,<26.0.0",
"tenacity>=9.0.0,<10.0.0",
"uvicorn[standard]>=0.34.0,<1.0.0"
]

[dependency-groups]
dev = [
"mypy>=1.14.0,<2.0.0",
"pre-commit>=4.0.0,<5.0.0",
"pytest>=8.3.0,<9.0.0",
"pytest-asyncio>=0.25.0,<1.0.0",
"pytest-cov>=6.0.0,<7.0.0",
"pytest-mock>=3.14.0,<4.0.0",
"ruff>=0.9.0,<1.0.0",
"testcontainers[kafka,postgres,redis]>=4.9.0,<5.0.0"
]
ml = [
"huggingface-hub>=0.27.0,<1.0.0",
"safetensors>=0.5.0,<1.0.0",
"torch>=2.5.0,<3.0.0",
"torchvision>=0.20.0,<1.0.0",
"transformers>=4.48.0,<5.0.0",
"ultralytics>=8.3.0,<9.0.0"
]
observability = [
"opentelemetry-api>=1.29.0,<2.0.0",
"opentelemetry-exporter-otlp>=1.29.0,<2.0.0",
"opentelemetry-instrumentation-fastapi>=0.50b0,<1.0.0",
"opentelemetry-instrumentation-httpx>=0.50b0,<1.0.0",
"opentelemetry-instrumentation-redis>=0.50b0,<1.0.0",
"opentelemetry-instrumentation-sqlalchemy>=0.50b0,<1.0.0",
"opentelemetry-sdk>=1.29.0,<2.0.0"
]

[project.urls]
Homepage = "https://github.com/bing-intelligence/pet-behavior-platform"
Repository = "https://github.com/bing-intelligence/pet-behavior-platform"
Issues = "https://github.com/bing-intelligence/pet-behavior-platform/issues"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
"services",
"workers",
"shared"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
"-ra",
"--strict-config",
"--strict-markers",
"--asyncio-mode=auto"
]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
"unit: fast tests with no external service dependencies",
"integration: tests requiring databases, queues, or object storage",
"e2e: end-to-end system tests",
"gpu: tests requiring an NVIDIA GPU",
"slow: tests that take longer than normal unit tests"
]
filterwarnings = [
"error",
"ignore::DeprecationWarning"
]

[tool.coverage.run]
branch = true
source = [
"services",
"workers",
"shared"
]
omit = [
"*/tests/*",
"*/migrations/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
"pragma: no cover",
"if TYPE_CHECKING:",
"raise NotImplementedError",
"if **name** == .**main**.:"
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = [
"services",
"workers",
"shared",
"tests"
]
exclude = [
".git",
".mypy_cache",
".pytest_cache",
".ruff_cache",
".venv",
"build",
"dist",
"database/migrations"
]

[tool.ruff.lint]
select = [
"A",
"ANN",
"ASYNC",
"B",
"C4",
"DTZ",
"E",
"F",
"FAST",
"I",
"N",
"PERF",
"PIE",
"PL",
"PTH",
"RUF",
"S",
"SIM",
"T20",
"TRY",
"UP",
"W"
]
ignore = [
"ANN401",
"PLR0913",
"S101",
"TRY003"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
"ANN",
"PLR2004",
"S101"
]
"database/migrations/**/*.py" = [
"E501",
"INP001"
]

[tool.ruff.lint.isort]
known-first-party = [
"services",
"workers",
"shared"
]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
pretty = true
plugins = [
"pydantic.mypy"
]
exclude = [
"database/migrations"
]

[[tool.mypy.overrides]]
module = [
"aiokafka.*",
"boto3.*",
"cv2.*",
"prometheus_client.*",
"torch.*",
"torchvision.*",
"transformers.*",
"ultralytics.*"
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
